# zela_oracle_read_path_benchmark

./: .gitignore  Cargo.toml  README.md
analysis/: analyze.py  m5_manifest.txt  make_m5_figures.py
analysis/post_hoc/: README.md  fetch_new_slots.py  fill_missing_validators.py  leader_correlation_v3.py  route_test_session.py
baseline_client/: Cargo.toml
baseline_client/src/: main.rs
docs/: M0_DEPLOY_SUMMARY.md  M1_RESULTS.md  M2_RESULTS.md  M3_RESULTS.md  M4_RESULTS.md  M5_RESULTS.md
docs/figures/: summary.json
leader_correlation_results/: leader_cache.json  runs_with_leaders.csv  runs_with_leaders_fixed.csv  runs_with_leaders_offset_-1.csv  runs_with_leaders_offset_-2.csv  runs_with_leaders_offset_0.csv  runs_with_leaders_offset_1.csv  runs_with_leaders_offset_2.csv  runs_with_leaders_offset_3.csv  runs_with_leaders_v2.csv  runs_with_leaders_v3.csv  validator_cache.json
orchestrator/: orchestrate.py
procedures/m6_sim_recheck/: Cargo.toml
procedures/oracle_read/: Cargo.toml
scripts/: cron_run.sh
zela_datasets/dataset_2026_04_21_afternoon/: aggregates.csv  feeds.csv
zela_datasets/dataset_2026_04_21_evening/: feeds.csv
zela_datasets/dataset_2026_04_21_late_morning/: aggregates.csv
zela_datasets/dataset_2026_04_22_morning/: aggregates.csv  feeds.csv
zela_datasets/dataset_2026_05_04_2200/: aggregates.csv  feeds.csv  summary.json
zela_datasets/dataset_2026_05_06_1655/: aggregates.csv  feeds.csv
zela_datasets/dataset_2026_05_06_1700/: aggregates.csv  feeds.csv
zela_datasets/dataset_2026_05_06_2200/: aggregates.csv  feeds.csv
(+167 files in other folders)
